Commit No.1 - Adding a RecyclerView and Populating it

--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
+
     <ImageView
         android:id="@+id/cat_photo"
         android:layout_width="60dp"
@@ -13,30 +14,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="@color/material_dynamic_neutral50" />
+
     <TextView
         android:id="@+id/cat_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/cat_photo"
+        app:layout_constraintStart_toEndOf="@id/cat_photo"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Cat Name" />
+
     <TextView
         android:id="@+id/cat_breed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/cat_name"
-        app:layout_constraintTop_toBottomOf="@+id/cat_name"
+        app:layout_constraintStart_toStartOf="@id/cat_name"
+        app:layout_constraintTop_toBottomOf="@id/cat_name"
         tools:text="Cat Breed" />
+
     <TextView
         android:id="@+id/cat_biography"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/cat_breed"
-        app:layout_constraintTop_toBottomOf="@+id/cat_breed"
+        app:layout_constraintStart_toStartOf="@id/cat_breed"
+        app:layout_constraintTop_toBottomOf="@id/cat_breed"
         tools:text="Cat Biography" />
+
     <TextView
         android:id="@+id/cat_gender"
         android:layout_width="wrap_content"
@@ -45,5 +50,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="&#9794;" />
+        tools:text="♀" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
